allow empty ads and videoinference

--- a/config.yaml
+++ b/config.yaml
@@ -2,8 +2,7 @@ server:
   port: "50053"
 
 database:
-  ip: "host.docker.internal"
-  port: "27017"
+  address: "host.docker.internal:27017"
   dbName: "cap"
   dbUser: "cap-root"
   dbPass: "cap-root"
